--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Homework 11</title>
   </head>
   <body>
     <form class="search-form" id="search-form">
       <input
+        class="search-input"
         type="text"
         name="searchQuery"
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button class="search-button" type="submit">
+        <i class="fa fa-search"></i>
+      </button>
     </form>
 
-    <div class="gallery">
-      <!-- Картки зображень -->
-    </div>
+    <div class="gallery"></div>
 
     <button type="button" class="load-more">Load more</button>
 
